# InvoiceGeneratorDesktop

./: .dockerignore  .gitignore  CHANGELOG.md  Dockerfile  Dockerfile.windows  INSTALLATION_GUIDE.md  LICENSE  README.md  RELEASE_CHECKLIST.md  RELEASE_FILES_SUMMARY.md  RELEASE_NOTES.md  RELEASE_v1.0.0.md  ROADMAP.md  SECURITY.md  SETUP_GUIDE.md  TROUBLESHOOTING.md  docker-compose.yml  index.html  package.json  tsconfig.json  vite.config.ts
.agent/rules/: instructions.md
.github/: copilot-instructions.md
.github/workflows/: release.yml
docs/: DARK_MODE_IMPLEMENTATION.md  DEVELOPER_NOTES.md  QUICK_START.md  RESPONSIVE_DESIGN.md  SPLASH_SCREEN_DESIGN_GUIDE.md  SPLASH_SCREEN_IMPLEMENTATION.md
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/plugins-workspace/: package.json  pnpm-lock.yaml  pnpm-workspace.yaml
src-tauri/plugins-workspace/.github/workflows/: audit-javascript.yml  covector-version-or-publish.yml  lint-javascript.yml  sync.yml
src-tauri/plugins-workspace/plugins/single-instance/src/platform_impl/: windows.rs
src-tauri/plugins-workspace/plugins/sql/: package.json
src-tauri/plugins-workspace/plugins/store/examples/AppSettingsManager/: package.json
src-tauri/plugins-workspace/plugins/websocket/: Cargo.toml
src-tauri/plugins-workspace/plugins/websocket/examples/tauri-app/: package.json
src-tauri/plugins-workspace/plugins/websocket/examples/tauri-app/src-tauri/: Cargo.toml
src-tauri/plugins-workspace/plugins/websocket/src/: lib.rs
src-tauri/src/: main.rs
src/components/: CustomerManagement.tsx  InvoiceForm.tsx  InvoiceHistory.tsx  Settings.tsx  SplashScreen.tsx  UpdateTab.tsx
src/components/invoice/: InvoiceHeader.tsx  LineItemsTable.tsx  TaxSummary.tsx
src/contexts/: ThemeContext.tsx
src/hooks/: useInvoiceForm.ts
src/services/: backup.ts  customerService.ts  db.ts  drive.ts  invoiceService.ts  pdfGenerator.ts  updateService.ts
src/types/: invoice.ts  jspdf-autotable.d.ts
src/utils/: constants.ts  numberToWords.ts  tauriStorage.ts  themeClasses.ts
