[package]
name = "invoice-generator-desktop"
version = "1.0.0"
description = "Desktop Invoice Generator for Apex Solar"
authors = ["DevCrewX"]
license = "MIT"
repository = "https://github.com/ArindamTripathi619/InvoiceGeneratorDesktop"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = [ "dialog-message", "dialog-open", "dialog-save", "fs-all", "path-all", "shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[features]
# This feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
