[package]
name = "invoice-generator-desktop"
version = "1.1.0"
description = "Desktop Invoice Generator for Apex Solar"
authors = ["DevCrewX"]
license = "MIT"
repository = "https://github.com/ArindamTripathi619/InvoiceGeneratorDesktop"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = [ "dialog-ask", "fs-write-file", "http-request", "fs-exists", "fs-read-file", "fs-create-dir", "dialog-message", "dialog-open", "dialog-save", "path-all", "shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json", "cookies"] }
regex = "1.10"
zip = "0.6"
tauri-plugin-sql = { path = "./plugins-workspace/plugins/sql", features = ["sqlite"] }

[features]
# This feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
